--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "moment": "^2.24.0",
         "react-datepicker": "^2.9.3",
         "react-file-viewer": "^1.1.0",
+        "react-loading": "^2.0.3",
         "react-pdfobject": "^1.1.1",
         "react-router-dom": "^5.0.1",
         "react-select": "^3.0.4"
